push 2 of day 2

--- a/Scrape to Data_Frame Loop.ipynb
+++ b/Scrape to Data_Frame Loop.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,9 +79,8 @@
     "    tables within the URl and turn HTML data into a \n",
     "    pandas DF. \n",
     "    ------------------------------------\n",
-    "    PARAMETERS: takes in list of URL addresses, \n",
-    "    and a dictionary with header information for \n",
-    "    pulling data from footballdb.com\n",
+    "    PARAMETERS: List of URL addresses for scrape/ \n",
+    "    Dictionary of authorized header parameters \n",
     "    ------------------------------------\n",
     "    \n",
     "    '''\n",
@@ -89,7 +88,7 @@
     "    for url in url_list:\n",
     "        columns = {}\n",
     "        r = requests.get(url, headers=headers)\n",
-    "        print(r.status_code)\n",
+    "#         print(r.status_code)\n",
     "        soup = BeautifulSoup(r.text, 'html.parser')\n",
     "        col_names = soup.find_all('th')\n",
     "        row_names = soup.find_all('tr')\n",
@@ -113,29 +112,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n",
-      "200\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "Make_Save_DB(url_list, headers)"
+    "#Make_Save_DB(url_list, headers)"
    ]
   }
  ],
