--- a/EDA Table Creation_2009.ipynb
+++ b/EDA Table Creation_2009.ipynb
@@ -542,7 +542,9 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [
     {
      "data": {
@@ -693,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -735,138 +737,28 @@
        "      <td>2009</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>Green Bay PackersGreen Bay</td>\n",
-       "      <td>16</td>\n",
-       "      <td>18.6</td>\n",
-       "      <td>284.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>Baltimore RavensBaltimore</td>\n",
-       "      <td>16</td>\n",
-       "      <td>16.3</td>\n",
-       "      <td>300.5</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cincinnati BengalsCincinnati</td>\n",
-       "      <td>16</td>\n",
-       "      <td>18.2</td>\n",
-       "      <td>301.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Minnesota VikingsMinnesota</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>305.5</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>Dallas CowboysDallas</td>\n",
-       "      <td>16</td>\n",
-       "      <td>15.6</td>\n",
-       "      <td>315.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>New England PatriotsNew England</td>\n",
-       "      <td>16</td>\n",
-       "      <td>17.8</td>\n",
-       "      <td>320.2</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11</th>\n",
-       "      <td>Philadelphia EaglesPhiladelphia</td>\n",
-       "      <td>16</td>\n",
-       "      <td>21.1</td>\n",
-       "      <td>321.1</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>San Diego ChargersSan Diego</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>327.0</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>17</th>\n",
-       "      <td>Indianapolis ColtsIndianapolis</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19.2</td>\n",
-       "      <td>339.2</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>19</th>\n",
-       "      <td>Arizona CardinalsArizona</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.3</td>\n",
-       "      <td>346.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>24</th>\n",
-       "      <td>New Orleans SaintsNew Orleans</td>\n",
-       "      <td>16</td>\n",
-       "      <td>21.3</td>\n",
-       "      <td>357.8</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                               Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "0              New York JetsNY Jets   16   14.8  252.3  2009    True\n",
-       "1        Green Bay PackersGreen Bay   16   18.6  284.4  2009    True\n",
-       "2         Baltimore RavensBaltimore   16   16.3  300.5  2009    True\n",
-       "3      Cincinnati BengalsCincinnati   16   18.2  301.4  2009    True\n",
-       "5        Minnesota VikingsMinnesota   16   19.5  305.5  2009    True\n",
-       "8              Dallas CowboysDallas   16   15.6  315.9  2009    True\n",
-       "10  New England PatriotsNew England   16   17.8  320.2  2009    True\n",
-       "11  Philadelphia EaglesPhiladelphia   16   21.1  321.1  2009    True\n",
-       "15      San Diego ChargersSan Diego   16   20.0  327.0  2009    True\n",
-       "17   Indianapolis ColtsIndianapolis   16   19.2  339.2  2009    True\n",
-       "19         Arizona CardinalsArizona   16   20.3  346.4  2009    True\n",
-       "24    New Orleans SaintsNew Orleans   16   21.3  357.8  2009    True"
+       "                   Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "0  New York JetsNY Jets   16   14.8  252.3  2009    True"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'True']\n",
-    "Playoff_tb"
+    "Playoff_tb.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -908,230 +800,64 @@
        "      <td>2009</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>Denver BroncosDenver</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.2</td>\n",
-       "      <td>315.0</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>Carolina PanthersCarolina</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19.2</td>\n",
-       "      <td>315.8</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Washington RedskinsWashington</td>\n",
-       "      <td>16</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>319.7</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Houston TexansHouston</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.8</td>\n",
-       "      <td>324.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>New York GiantsNY Giants</td>\n",
-       "      <td>16</td>\n",
-       "      <td>26.7</td>\n",
-       "      <td>324.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>San Francisco 49ersSan Francisco</td>\n",
-       "      <td>16</td>\n",
-       "      <td>17.6</td>\n",
-       "      <td>326.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>Chicago BearsChicago</td>\n",
-       "      <td>16</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>337.8</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>18</th>\n",
-       "      <td>Buffalo BillsBuffalo</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.4</td>\n",
-       "      <td>340.6</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20</th>\n",
-       "      <td>Atlanta FalconsAtlanta</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.3</td>\n",
-       "      <td>348.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21</th>\n",
-       "      <td>Miami DolphinsMiami</td>\n",
-       "      <td>16</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>349.3</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22</th>\n",
-       "      <td>Jacksonville JaguarsJacksonville</td>\n",
-       "      <td>16</td>\n",
-       "      <td>23.8</td>\n",
-       "      <td>352.3</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>23</th>\n",
-       "      <td>Seattle SeahawksSeattle</td>\n",
-       "      <td>16</td>\n",
-       "      <td>24.4</td>\n",
-       "      <td>356.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25</th>\n",
-       "      <td>Oakland RaidersOakland</td>\n",
-       "      <td>16</td>\n",
-       "      <td>23.7</td>\n",
-       "      <td>361.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>26</th>\n",
-       "      <td>Tampa Bay BuccaneersTampa Bay</td>\n",
-       "      <td>16</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>365.6</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>27</th>\n",
-       "      <td>Tennessee TitansTennessee</td>\n",
-       "      <td>16</td>\n",
-       "      <td>25.1</td>\n",
-       "      <td>365.6</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>28</th>\n",
-       "      <td>St. Louis RamsSt. Louis</td>\n",
-       "      <td>16</td>\n",
-       "      <td>27.2</td>\n",
-       "      <td>372.8</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>29</th>\n",
-       "      <td>Kansas City ChiefsKansas City</td>\n",
-       "      <td>16</td>\n",
-       "      <td>26.5</td>\n",
-       "      <td>388.2</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>30</th>\n",
-       "      <td>Cleveland BrownsCleveland</td>\n",
-       "      <td>16</td>\n",
-       "      <td>23.4</td>\n",
-       "      <td>389.3</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>31</th>\n",
-       "      <td>Detroit LionsDetroit</td>\n",
-       "      <td>16</td>\n",
-       "      <td>30.9</td>\n",
-       "      <td>392.1</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "4      Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False\n",
-       "6               Denver BroncosDenver   16   20.2  315.0  2009   False\n",
-       "7          Carolina PanthersCarolina   16   19.2  315.8  2009   False\n",
-       "9      Washington RedskinsWashington   16   21.0  319.7  2009   False\n",
-       "12             Houston TexansHouston   16   20.8  324.9  2009   False\n",
-       "13          New York GiantsNY Giants   16   26.7  324.9  2009   False\n",
-       "14  San Francisco 49ersSan Francisco   16   17.6  326.4  2009   False\n",
-       "16              Chicago BearsChicago   16   23.4  337.8  2009   False\n",
-       "18              Buffalo BillsBuffalo   16   20.4  340.6  2009   False\n",
-       "20            Atlanta FalconsAtlanta   16   20.3  348.9  2009   False\n",
-       "21               Miami DolphinsMiami   16   24.4  349.3  2009   False\n",
-       "22  Jacksonville JaguarsJacksonville   16   23.8  352.3  2009   False\n",
-       "23           Seattle SeahawksSeattle   16   24.4  356.4  2009   False\n",
-       "25            Oakland RaidersOakland   16   23.7  361.9  2009   False\n",
-       "26     Tampa Bay BuccaneersTampa Bay   16   25.0  365.6  2009   False\n",
-       "27         Tennessee TitansTennessee   16   25.1  365.6  2009   False\n",
-       "28           St. Louis RamsSt. Louis   16   27.2  372.8  2009   False\n",
-       "29     Kansas City ChiefsKansas City   16   26.5  388.2  2009   False\n",
-       "30         Cleveland BrownsCleveland   16   23.4  389.3  2009   False\n",
-       "31              Detroit LionsDetroit   16   30.9  392.1  2009   False"
+       "                            Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "4  Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "no_Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'False']\n",
-    "no_Playoff_tb"
+    "no_Playoff_tb.head(1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "20 12\n"
+      "The teams that made the playoffs allowed 18.56 points/ game\n",
+      "The teams taht made the playoffs allowed 314.31 yards/ game\n"
      ]
     }
    ],
    "source": [
-    "print(len(no_Playoff_tb), len(Playoff_tb))"
+    "pts_avg = Playoff_tb['Pts/G'].mean()\n",
+    "yds_avg = Playoff_tb['Yds/G'].mean()\n",
+    "print('The teams that made the playoffs allowed {:2.2f} points/ game'.format(pts_avg))\n",
+    "print('The teams taht made the playoffs allowed {:2.2f} yards/ game'.format(yds_avg))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The teams that did NOT make the playoffs allowed 23.21 points/ game\n"
+     ]
+    }
+   ],
+   "source": [
+    "pts_avg2 = no_Playoff_tb['Pts/G'].mean()\n",
+    "yds_avg2 = no_Playoff_tb['Yds/G'].mean()\n",
+    "print('The teams that did NOT make the playoffs allowed {:2.2f} points/ game'.format(pts_avg2))\n",
+    "print('The teams that made the playoffs allowed {:2.2f} yards/ game'.format(yds_avg2))"
    ]
   },
   {
