push 7/ 2009 data complete

--- a/EDA Table Creation_2009.ipynb
+++ b/EDA Table Creation_2009.ipynb
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -497,7 +497,7 @@
        "31              Detroit LionsDetroit   16   30.9  392.1  2009"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -508,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -517,10 +517,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -541,10 +539,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -684,7 +680,7 @@
        "9  Washington RedskinsWashington   16   21.0  319.7  2009   False"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -695,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -737,28 +733,68 @@
        "      <td>2009</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Green Bay PackersGreen Bay</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>284.4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Baltimore RavensBaltimore</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>300.5</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cincinnati BengalsCincinnati</td>\n",
+       "      <td>16</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>Minnesota VikingsMinnesota</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>305.5</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                   Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "0  New York JetsNY Jets   16   14.8  252.3  2009    True"
+       "                           Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "0          New York JetsNY Jets   16   14.8  252.3  2009    True\n",
+       "1    Green Bay PackersGreen Bay   16   18.6  284.4  2009    True\n",
+       "2     Baltimore RavensBaltimore   16   16.3  300.5  2009    True\n",
+       "3  Cincinnati BengalsCincinnati   16   18.2  301.4  2009    True\n",
+       "5    Minnesota VikingsMinnesota   16   19.5  305.5  2009    True"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'True']\n",
-    "Playoff_tb.head(1)"
+    "Playoff_tb.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -800,28 +836,68 @@
        "      <td>2009</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Denver BroncosDenver</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Carolina PanthersCarolina</td>\n",
+       "      <td>16</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>315.8</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Washington RedskinsWashington</td>\n",
+       "      <td>16</td>\n",
+       "      <td>21.0</td>\n",
+       "      <td>319.7</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Houston TexansHouston</td>\n",
+       "      <td>16</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>324.9</td>\n",
+       "      <td>2009</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "4  Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False"
+       "                             Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "4   Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False\n",
+       "6            Denver BroncosDenver   16   20.2  315.0  2009   False\n",
+       "7       Carolina PanthersCarolina   16   19.2  315.8  2009   False\n",
+       "9   Washington RedskinsWashington   16   21.0  319.7  2009   False\n",
+       "12          Houston TexansHouston   16   20.8  324.9  2009   False"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "no_Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'False']\n",
-    "no_Playoff_tb.head(1)"
+    "no_Playoff_tb.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +905,7 @@
      "output_type": "stream",
      "text": [
       "The teams that made the playoffs allowed 18.56 points/ game\n",
-      "The teams taht made the playoffs allowed 314.31 yards/ game\n"
+      "The teams that made the playoffs allowed 314.31 yards/ game\n"
      ]
     }
    ],
@@ -837,19 +913,20 @@
     "pts_avg = Playoff_tb['Pts/G'].mean()\n",
     "yds_avg = Playoff_tb['Yds/G'].mean()\n",
     "print('The teams that made the playoffs allowed {:2.2f} points/ game'.format(pts_avg))\n",
-    "print('The teams taht made the playoffs allowed {:2.2f} yards/ game'.format(yds_avg))"
+    "print('The teams that made the playoffs allowed {:2.2f} yards/ game'.format(yds_avg))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The teams that did NOT make the playoffs allowed 23.21 points/ game\n"
+      "The teams that did NOT make the playoffs allowed 23.21 points/ game\n",
+      "The teams that did NOT make the playoffs allowed 347.64 yards/ game\n"
      ]
     }
    ],
@@ -857,7 +934,159 @@
     "pts_avg2 = no_Playoff_tb['Pts/G'].mean()\n",
     "yds_avg2 = no_Playoff_tb['Yds/G'].mean()\n",
     "print('The teams that did NOT make the playoffs allowed {:2.2f} points/ game'.format(pts_avg2))\n",
-    "print('The teams that made the playoffs allowed {:2.2f} yards/ game'.format(yds_avg2))"
+    "print('The teams that did NOT make the playoffs allowed {:2.2f} yards/ game'.format(yds_avg2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Playoff</th>\n",
+       "      <th>no_Playoff</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_stats</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>pts/G</th>\n",
+       "      <td>18.558333</td>\n",
+       "      <td>23.21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yds/G</th>\n",
+       "      <td>314.308333</td>\n",
+       "      <td>347.64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Playoff  no_Playoff\n",
+       "avg_stats                        \n",
+       "pts/G       18.558333       23.21\n",
+       "yds/G      314.308333      347.64"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = {'avg_stats': ['pts/G', 'yds/G'], \n",
+    "        'Playoff': [pts_avg, yds_avg],\n",
+    "        'no_Playoff': [pts_avg2, yds_avg2]}\n",
+    "diff_2009 = pd.DataFrame(data=data)\n",
+    "diff_2009.set_index('avg_stats', inplace=True)\n",
+    "diff_2009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "minus = diff_2009['no_Playoff'] - diff_2009['Playoff']\n",
+    "data_sub = round(minus, 2)\n",
+    "diff_2009['Difference'] = data_sub"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Playoff</th>\n",
+       "      <th>no_Playoff</th>\n",
+       "      <th>Difference</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>avg_stats</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>pts/G</th>\n",
+       "      <td>18.558333</td>\n",
+       "      <td>23.21</td>\n",
+       "      <td>4.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>yds/G</th>\n",
+       "      <td>314.308333</td>\n",
+       "      <td>347.64</td>\n",
+       "      <td>33.33</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Playoff  no_Playoff  Difference\n",
+       "avg_stats                                    \n",
+       "pts/G       18.558333       23.21        4.65\n",
+       "yds/G      314.308333      347.64       33.33"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "diff_2009"
    ]
   },
   {
