--- a/EDA Table Creation_2009.ipynb
+++ b/EDA Table Creation_2009.ipynb
@@ -6,8 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
@@ -897,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +919,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -943,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -967,8 +966,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Playoff</th>\n",
-       "      <th>no_Playoff</th>\n",
+       "      <th>Playoff_teams</th>\n",
+       "      <th>non_Playoff_teams</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>avg_stats</th>\n",
@@ -978,12 +977,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>pts/G</th>\n",
+       "      <th>allowed_pts/G</th>\n",
        "      <td>18.56</td>\n",
        "      <td>23.21</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>yds/G</th>\n",
+       "      <th>allowed_yds/G</th>\n",
        "      <td>314.31</td>\n",
        "      <td>347.64</td>\n",
        "    </tr>\n",
@@ -992,21 +991,21 @@
        "</div>"
       ],
       "text/plain": [
-       "           Playoff  no_Playoff\n",
-       "avg_stats                     \n",
-       "pts/G        18.56       23.21\n",
-       "yds/G       314.31      347.64"
+       "               Playoff_teams  non_Playoff_teams\n",
+       "avg_stats                                      \n",
+       "allowed_pts/G          18.56              23.21\n",
+       "allowed_yds/G         314.31             347.64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data = {'avg_stats': ['pts/G', 'yds/G'], \n",
-    "        'Playoff': [pts_avg, yds_avg],\n",
-    "        'no_Playoff': [pts_avg2, yds_avg2]}\n",
+    "data = {'avg_stats': ['allowed_pts/G', 'allowed_yds/G'], \n",
+    "        'Playoff_teams': [pts_avg, yds_avg],\n",
+    "        'non_Playoff_teams': [pts_avg2, yds_avg2]}\n",
     "diff_2009 = pd.DataFrame(data=data)\n",
     "diff_2009.set_index('avg_stats', inplace=True)\n",
     "diff_2009"
@@ -1014,18 +1013,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "minus = diff_2009['no_Playoff'] - diff_2009['Playoff']\n",
+    "minus = diff_2009['non_Playoff_teams'] - diff_2009['Playoff_teams']\n",
     "data_sub = round(minus, 2)\n",
     "diff_2009['Difference'] = data_sub"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1049,8 +1048,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Playoff</th>\n",
-       "      <th>no_Playoff</th>\n",
+       "      <th>Playoff_teams</th>\n",
+       "      <th>non_Playoff_teams</th>\n",
        "      <th>Difference</th>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1062,13 +1061,13 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>pts/G</th>\n",
+       "      <th>allowed_pts/G</th>\n",
        "      <td>18.56</td>\n",
        "      <td>23.21</td>\n",
        "      <td>4.65</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>yds/G</th>\n",
+       "      <th>allowed_yds/G</th>\n",
        "      <td>314.31</td>\n",
        "      <td>347.64</td>\n",
        "      <td>33.33</td>\n",
@@ -1078,13 +1077,13 @@
        "</div>"
       ],
       "text/plain": [
-       "           Playoff  no_Playoff  Difference\n",
-       "avg_stats                                 \n",
-       "pts/G        18.56       23.21        4.65\n",
-       "yds/G       314.31      347.64       33.33"
+       "               Playoff_teams  non_Playoff_teams  Difference\n",
+       "avg_stats                                                  \n",
+       "allowed_pts/G          18.56              23.21        4.65\n",
+       "allowed_yds/G         314.31             347.64       33.33"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
