push 10/ post lunch

--- a/EDA Table Creation_2009.ipynb
+++ b/EDA Table Creation_2009.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Turn NFL full-season defensive data into cleaned tables representing teams that made/ didn't make playoffs (two tables)***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -895,6 +902,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Get averaged data for both playoff/ non-playoff tables for future comparisons (2009)***"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -942,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -997,7 +1011,7 @@
        "allowed_yds/G         314.31             347.64"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,6 +1104,16 @@
    ],
    "source": [
     "diff_2009"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# maybe add entire nfl averages on for the 2009-season,\n",
+    "# and compare the playoff/ non-playoff averages. "
    ]
   },
   {
