half done with csv updates/ push 11

--- a/EDA Table Creation_2009.ipynb
+++ b/EDA Table Creation_2009.ipynb
@@ -697,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -757,50 +757,30 @@
        "      <td>2009</td>\n",
        "      <td>True</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>Cincinnati BengalsCincinnati</td>\n",
-       "      <td>16</td>\n",
-       "      <td>18.2</td>\n",
-       "      <td>301.4</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>Minnesota VikingsMinnesota</td>\n",
-       "      <td>16</td>\n",
-       "      <td>19.5</td>\n",
-       "      <td>305.5</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>True</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                           Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "0          New York JetsNY Jets   16   14.8  252.3  2009    True\n",
-       "1    Green Bay PackersGreen Bay   16   18.6  284.4  2009    True\n",
-       "2     Baltimore RavensBaltimore   16   16.3  300.5  2009    True\n",
-       "3  Cincinnati BengalsCincinnati   16   18.2  301.4  2009    True\n",
-       "5    Minnesota VikingsMinnesota   16   19.5  305.5  2009    True"
+       "                         Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "0        New York JetsNY Jets   16   14.8  252.3  2009    True\n",
+       "1  Green Bay PackersGreen Bay   16   18.6  284.4  2009    True\n",
+       "2   Baltimore RavensBaltimore   16   16.3  300.5  2009    True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'True']\n",
-    "Playoff_tb.head(5)"
+    "Playoff_tb.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -860,45 +840,25 @@
        "      <td>2009</td>\n",
        "      <td>False</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>Washington RedskinsWashington</td>\n",
-       "      <td>16</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>319.7</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>Houston TexansHouston</td>\n",
-       "      <td>16</td>\n",
-       "      <td>20.8</td>\n",
-       "      <td>324.9</td>\n",
-       "      <td>2009</td>\n",
-       "      <td>False</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                             Team  Gms  Pts/G  Yds/G  year Playoff\n",
-       "4   Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False\n",
-       "6            Denver BroncosDenver   16   20.2  315.0  2009   False\n",
-       "7       Carolina PanthersCarolina   16   19.2  315.8  2009   False\n",
-       "9   Washington RedskinsWashington   16   21.0  319.7  2009   False\n",
-       "12          Houston TexansHouston   16   20.8  324.9  2009   False"
+       "                            Team  Gms  Pts/G  Yds/G  year Playoff\n",
+       "4  Pittsburgh SteelersPittsburgh   16   20.2  305.3  2009   False\n",
+       "6           Denver BroncosDenver   16   20.2  315.0  2009   False\n",
+       "7      Carolina PanthersCarolina   16   19.2  315.8  2009   False"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "no_Playoff_tb = filtered_2009.loc[lambda filtered_2009: filtered_2009['Playoff'] == 'False']\n",
-    "no_Playoff_tb.head(5)"
+    "no_Playoff_tb.head(3)"
    ]
   },
   {
@@ -956,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1011,7 +971,7 @@
        "allowed_yds/G         314.31             347.64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
