--- a/Season_Data_Update.ipynb
+++ b/Season_Data_Update.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -571,7 +571,7 @@
        "31     4510   281.9    6432  402.0  2019  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1185,7 @@
        "31     4510   281.9    6432  402.0  2019   False  "
       ]
      },
-     "execution_count": 64,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1198,11 +1198,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data/2019_Update.csv', index=False)"
+    "# df.to_csv('data/2019_Update.csv', index=False)"
    ]
   },
   {
