first push wednesday

--- a/EDA Table Creation Loop.ipynb
+++ b/EDA Table Creation Loop.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
        " 'data/2019_Update.csv']"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "26  2009    Tampa Bay BuccaneersTampa Bay   25.0  365.6     True"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -460,13 +460,559 @@
        "31  2009              Detroit LionsDetroit   30.9  392.1    False"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "yearly_splits[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Yes_playoffs_df = pd.concat(yearly_splits[0][:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "No_playoffs_df = pd.concat(yearly_splits[1][:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pts/G</th>\n",
+       "      <th>Yds/G</th>\n",
+       "      <th>Playoff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Green Bay PackersGreen Bay</td>\n",
+       "      <td>18.6</td>\n",
+       "      <td>284.4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Baltimore RavensBaltimore</td>\n",
+       "      <td>16.3</td>\n",
+       "      <td>300.5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Cincinnati BengalsCincinnati</td>\n",
+       "      <td>18.2</td>\n",
+       "      <td>301.4</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Pittsburgh SteelersPittsburgh</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>305.3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Dallas CowboysDallas</td>\n",
+       "      <td>15.6</td>\n",
+       "      <td>315.9</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Kansas City ChiefsKansas City</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>349.6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Green Bay PackersGreen Bay</td>\n",
+       "      <td>19.6</td>\n",
+       "      <td>352.6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Tennessee TitansTennessee</td>\n",
+       "      <td>20.7</td>\n",
+       "      <td>359.5</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Seattle SeahawksSeattle</td>\n",
+       "      <td>24.9</td>\n",
+       "      <td>381.6</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Houston TexansHouston</td>\n",
+       "      <td>24.1</td>\n",
+       "      <td>388.3</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>132 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year                           Team  Pts/G  Yds/G  Playoff\n",
+       "1   2009     Green Bay PackersGreen Bay   18.6  284.4     True\n",
+       "2   2009      Baltimore RavensBaltimore   16.3  300.5     True\n",
+       "3   2009   Cincinnati BengalsCincinnati   18.2  301.4     True\n",
+       "4   2009  Pittsburgh SteelersPittsburgh   20.2  305.3     True\n",
+       "8   2009           Dallas CowboysDallas   15.6  315.9     True\n",
+       "..   ...                            ...    ...    ...      ...\n",
+       "16  2019  Kansas City ChiefsKansas City   19.2  349.6     True\n",
+       "17  2019     Green Bay PackersGreen Bay   19.6  352.6     True\n",
+       "20  2019      Tennessee TitansTennessee   20.7  359.5     True\n",
+       "25  2019        Seattle SeahawksSeattle   24.9  381.6     True\n",
+       "27  2019          Houston TexansHouston   24.1  388.3     True\n",
+       "\n",
+       "[132 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 60,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Yes_playoffs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>year</th>\n",
+       "      <th>Team</th>\n",
+       "      <th>Pts/G</th>\n",
+       "      <th>Yds/G</th>\n",
+       "      <th>Playoff</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>New York JetsNY Jets</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>252.3</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Minnesota VikingsMinnesota</td>\n",
+       "      <td>19.5</td>\n",
+       "      <td>305.5</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Denver BroncosDenver</td>\n",
+       "      <td>20.2</td>\n",
+       "      <td>315.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>Carolina PanthersCarolina</td>\n",
+       "      <td>19.2</td>\n",
+       "      <td>315.8</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>2009</td>\n",
+       "      <td>New England PatriotsNew England</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>320.2</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Washington RedskinsWashington</td>\n",
+       "      <td>27.2</td>\n",
+       "      <td>385.1</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Cincinnati BengalsCincinnati</td>\n",
+       "      <td>26.2</td>\n",
+       "      <td>393.7</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Miami DolphinsMiami</td>\n",
+       "      <td>30.9</td>\n",
+       "      <td>397.8</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Detroit LionsDetroit</td>\n",
+       "      <td>26.4</td>\n",
+       "      <td>400.4</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>2019</td>\n",
+       "      <td>Arizona CardinalsArizona</td>\n",
+       "      <td>27.6</td>\n",
+       "      <td>402.0</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>220 rows × 5 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    year                             Team  Pts/G  Yds/G  Playoff\n",
+       "0   2009             New York JetsNY Jets   14.8  252.3    False\n",
+       "5   2009       Minnesota VikingsMinnesota   19.5  305.5    False\n",
+       "6   2009             Denver BroncosDenver   20.2  315.0    False\n",
+       "7   2009        Carolina PanthersCarolina   19.2  315.8    False\n",
+       "10  2009  New England PatriotsNew England   17.8  320.2    False\n",
+       "..   ...                              ...    ...    ...      ...\n",
+       "26  2019    Washington RedskinsWashington   27.2  385.1    False\n",
+       "28  2019     Cincinnati BengalsCincinnati   26.2  393.7    False\n",
+       "29  2019              Miami DolphinsMiami   30.9  397.8    False\n",
+       "30  2019             Detroit LionsDetroit   26.4  400.4    False\n",
+       "31  2019         Arizona CardinalsArizona   27.6  402.0    False\n",
+       "\n",
+       "[220 rows x 5 columns]"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "No_playoffs_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yes_overall_df_yds = pd.DataFrame(Yes_playoffs_df['Yds/G'].describe())\n",
+    "yes_overall_df_pts = pd.DataFrame(Yes_playoffs_df['Pts/G'].describe())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "yes_overall_df = pd.concat([yes_overall_df_yds, yes_overall_df_pts], axis=1,sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yds/G</th>\n",
+       "      <th>Pts/G</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>132.000000</td>\n",
+       "      <td>132.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>334.923485</td>\n",
+       "      <td>20.194697</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>32.044430</td>\n",
+       "      <td>2.880238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>267.100000</td>\n",
+       "      <td>14.100000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>307.875000</td>\n",
+       "      <td>18.350000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>338.150000</td>\n",
+       "      <td>20.200000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>359.150000</td>\n",
+       "      <td>21.925000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>411.600000</td>\n",
+       "      <td>26.800000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Yds/G       Pts/G\n",
+       "count  132.000000  132.000000\n",
+       "mean   334.923485   20.194697\n",
+       "std     32.044430    2.880238\n",
+       "min    267.100000   14.100000\n",
+       "25%    307.875000   18.350000\n",
+       "50%    338.150000   20.200000\n",
+       "75%    359.150000   21.925000\n",
+       "max    411.600000   26.800000"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "yes_overall_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_overall_df_yds = pd.DataFrame(No_playoffs_df['Yds/G'].describe())\n",
+    "no_overall_df_pts = pd.DataFrame(No_playoffs_df['Pts/G'].describe())\n",
+    "no_overall_df = pd.concat([no_overall_df_yds, no_overall_df_pts], axis=1,sort=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Yds/G</th>\n",
+       "      <th>Pts/G</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>220.000000</td>\n",
+       "      <td>220.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>351.632273</td>\n",
+       "      <td>23.946364</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>28.466120</td>\n",
+       "      <td>3.214513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>252.300000</td>\n",
+       "      <td>14.800000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>333.000000</td>\n",
+       "      <td>21.575000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>350.100000</td>\n",
+       "      <td>23.900000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>373.050000</td>\n",
+       "      <td>26.525000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>440.100000</td>\n",
+       "      <td>30.900000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Yds/G       Pts/G\n",
+       "count  220.000000  220.000000\n",
+       "mean   351.632273   23.946364\n",
+       "std     28.466120    3.214513\n",
+       "min    252.300000   14.800000\n",
+       "25%    333.000000   21.575000\n",
+       "50%    350.100000   23.900000\n",
+       "75%    373.050000   26.525000\n",
+       "max    440.100000   30.900000"
+      ]
+     },
+     "execution_count": 67,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_overall_df"
    ]
   },
   {
